== 0.6.1

* enhancements
  * Devise::Timeoutable - timeout sessions without activity
  * DataMapper now accepts conditions

== 0.6.0

* deprecations
  * :authenticatable is not included by default anymore

* enhancements
  * Added DataMapper support
  * Remove store_location from authenticatable strategy and add it to failure app
  * Allow a strategy to be placed after authenticatable
  * [#45] Do not rely attribute? methods, since they are not added on Datamapper

== 0.5.6

* enhancements
  * [#42] Do not send nil to build (DataMapper compatibility)
  * [#44] Allow to have scoped views

== 0.5.5

* enhancements
  * Allow overwriting find for authentication method
  * [#38] Remove Ruby 1.8.7 dependency

== 0.5.4

* deprecations
  * Deprecate :singular in devise_for and use :scope instead

* enhancements
  * [#37] Create after_sign_in_path_for and after_sign_out_path_for hooks to be
    overwriten in ApplicationController
  * Create sign_in_and_redirect and sign_out_and_redirect helpers
  * Warden::Manager.default_scope is automatically configured to the first given scope

== 0.5.3

* bug fix
  * MongoMapper now converts DateTime to Time
  * Ensure all controllers are unloadable

* enhancements
  * [#35] Moved friendly_token to Devise
  * Added Devise.all, so you can freeze your app strategies
  * Added Devise.apply_schema, so you can turn it to false in Datamapper or MongoMapper
    in cases you don't want it be handlded automatically

== 0.5.2

* enhancements
  * [#28] Improved sign_in and sign_out helpers to accepts resources
  * [#28] Added stored_location_for as a helper
  * [#20] Added test helpers

== 0.5.1

* enhancements
  * Added serializers based on Warden ones
  * Allow authentication keys to be set

== 0.5.0

* bug fix
  * Fixed a bug where remember me module was not working properly

* enhancements
  * Moved encryption strategy into the Encryptors module to allow several algorithms (by github.com/mhfs)